terraform/networking.tf
###Getting the ip for ssh access###
data "http" "myip" {
  url = "https://ipv4.icanhazip.com"
}

resource "azurerm_network_security_group" "nsg" {
  name                = "tf-managed-nsg"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  tags = {
    terraform-managed = "true"
  }
}

resource "azurerm_virtual_network" "vnet" {
  name                = "tf-managed-vnet"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  address_space       = ["10.0.0.0/16"]
  tags = {
    terraform-managed = "true"
  }

  subnet {
    name           = "tf-managed-subnet"
    address_prefix = "10.0.1.0/24"
    security_group = azurerm_network_security_group.nsg.id
  }
}

resource "azurerm_subnet" "subnet" {
  name                 = "tf-managed-subnet"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.0.1.0/24"]
  enforce_private_link_endpoint_network_policies = true
}

resource "azurerm_network_security_rule" "allowSSH" {
  name                        = "AllowAnySSHInbound"
  priority                    = 100
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "22"
  source_address_prefix       = "${chomp(data.http.myip.response_body)}/32"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.rg.name
  network_security_group_name = azurerm_network_security_group.nsg.name
}
